--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,11 +12,9 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Packaging config.tar.gz
-      uses: thedoctor0/zip-release@master
-      with:
-        type: 'tar'
-        filename: 'config.tar.gz'
-        directory: './config'
+      run: |
+        tar -cvzf ../config.tar.gz .
+      working-directory: ./config
 
     - name: Creating release
       uses: ncipollo/release-action@v1
